Finished central based interface